--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,21 @@
 {
-    "name": "My App",
-    "short_name": "My App",
-    "description": "A description of my app",
-    "start_url": ".",
+    "name": "DOKOBO",
+    "short_name": "DOKOBO",
+    "icons": [
+        {
+            "src": "/android-chrome-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "any maskable"
+        },
+        {
+            "src": "/android-chrome-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ],
+    "theme_color": "#e7ebc1",
+    "background_color": "#e7ebc1",
     "display": "standalone",
-    "background_color": "#fff",
-    "theme_color": "#007bff"
+	"start_url": "/index.html"
 }
-  
