--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,30 @@
 {
-    "name": "DOKOBO",
-    "short_name": "DOKOBO",
-    "icons": [
+    "name": "Karten",
+    "short_name": "KRT",
+    "description": "Wiziges Kartenspiel",
+
+
+    "scope": ".",
+    "start_url": "./index.html",
+
+    "prefer_related_applications": true,     
+    "background_color": "#fff",
+    "theme_color": "#fff",
+
+    "display": "standalone",
+    "icons": 
+    [
         {
-            "src": "/android-chrome-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "any maskable"
+          "src": "./icons/icon_size1.png",
+          "type": "image/png",
+          "sizes": "192x192",
+          "purpose": "maskable"
         },
         {
-            "src": "/android-chrome-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png"
+          "src": "./icons/icon_size2.png",
+          "type": "image/png",
+          "sizes": "512x512"
         }
-    ],
-    "theme_color": "#e7ebc1",
-    "background_color": "#e7ebc1",
-    "display": "standalone",
-	"start_url": "/index.html"
+
+    ]
 }
